Fix extra padding on mobile header.

--- a/frontend/app/app.component.scss
+++ b/frontend/app/app.component.scss
@@ -8,11 +8,12 @@ mat-sidenav-container {
 
 
 mat-toolbar {
+  height: 56px;
+  max-width: 100%;
+  padding: 0;
   position: fixed;
   top: 0;
-  height: 56px;
   z-index: 2;
-  max-width: 100%;
 }
 
 h1 {
